name:                perlin-play
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kosmoskatten/perlin-play#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable perlin-play
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wextra
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
